--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "joi": "^17.9.2",
     "mongodb": "^5.5.0",
     "mongoose": "^6.10.0",
     "nodemon": "^2.0.22"
