--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "express": "^4.18.2",
     "joi": "^17.9.2",
+    "joi-objectid": "^4.0.2",
     "mongodb": "^5.5.0",
     "mongoose": "^6.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22"
   }
 }
