--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "joi": "^17.9.2",
     "mongodb": "^5.5.0",
     "mongoose": "^6.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22"
   }
 }
