--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "joi-objectid": "^4.0.2",
-    "dotenv": "^16.0.3",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
     "mongoose": "^6.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "dotenv": "^16.0.3"
+
   }
 }
